# graphrag_catchup

./: .gitignore  README.md  main.py  pyproject.toml  settings.yaml
cache/community_reporting/: 0920723ecb0b9bdbab0e4bb3029f662d22729e5d064e0bdd524feed654d2e672_v4  0a030516190f2bbf82a757dd3a9be1e740b69cbde98900f2a0450588ebaca3a8_v4  10eff99564611fafba0a208c40cbfdb31dafdaa3e588415ab018de74cbe94583_v4  2c1e73fde35a6bfdb3f09d2db604955504ad128c9753d1258657d3b0bc3dc3fe_v4  4da8978a012d5b27c0a38c88f3868cb1e298cab7b6104b7d84f1a3841125e1e5_v4  4e7a40116b74c39b31bf1e5d5a6b47be09c6a670b304449c4339ce68e3382bfa_v4  5a5e4cf0be1fc844fe24a22295eac24f39c607881117ac8ff68efc6c6872fe6c_v4  5f177287cc1d03b9b2d7728e4a7a3095d02d7645793ca35242d3b9f41f9efd5d_v4  60bc98b8bda6612dbeae7d59ccb8cf88f8166ea87365522279e54d2ea37589d7_v4  76854061a7f3c4d4bee6dc86284f5ddae0a44becc3eac43085cc6fb575c6a300_v4  9150b2997527442bef22820156b742f78185c2983e48c9c45c809d96c7b4398f_v4  b839220b809307544b5beca8cc12c75b3a73f5dea4bb9467c12e3d5c0ea11784_v4  c1633981237c0d6a64a0418df169ffecba9af7e39f94d6e6112847fb5a6295d1_v4  dc4ab0b1e78924d32ec3c2f9856646acd8ede10247582a9cf89b5a596d051899_v4  (+1 more)
dickens/: graph_chunk_entity_relation.graphml  kv_store_llm_response_cache.json  vdb_entities.json
input/: book.txt
memo/: 20260314.md  20260321.md  20260327.md  20260402.md  20260417.md
memo/appendix/: graphrag_indexing.html  (+2 more)
output/: communities.parquet  community_reports.parquet  dickens_graph_preview.html  documents.parquet  entities.parquet  graph_main_preview.html  relationships.parquet  stats.json  text_units.parquet
(+175 files in other folders)
